--- a/_includes/events.html
+++ b/_includes/events.html
@@ -7,9 +7,8 @@
 
                
 
-
-                {% for event_hash in [site.data.events | sort]  %}
-                {{ event_hash }}
+                {% assign site.data.events = site.data.events | sort  %}
+                {% for event_hash in site.data.events  %}
                 {% assign event = event_hash[1] %}
                     <div class="panel panel-default">
                             <div class="button panel-heading" data-toggle="collapse" data-target="#{{ event.id }}">
