--- a/_includes/events.html
+++ b/_includes/events.html
@@ -7,8 +7,8 @@
 
                
 
-                {% assign site.data.events = site.data.events | sort  %}
-                {{ site.data.events }}
+                {% site.data.events | sort  %}
+                
                 {% for event_hash in site.data.events  %}
                 {% assign event = event_hash[1] %}
                     <div class="panel panel-default">
