--- a/_includes/events.html
+++ b/_includes/events.html
@@ -7,7 +7,7 @@
 
                
 
-                {{ site.data.events | sort  }
+                {{ site.data.events | sort  }}
 
                 {% for event_hash in site.data.events  %}
                 {% assign event = event_hash[1] %}
