--- a/_includes/events.html
+++ b/_includes/events.html
@@ -3,8 +3,8 @@
         <div class="container">  
             <h2 class="title text-center">Living Atlases events</h2>  
             <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-
-                {% for event_hash in site.data.events reversed %}
+                {% assign sorted_pages = (site.data.events | sort) %}
+                {% for event_hash in sorted_pages reversed %}
                 {% assign event = event_hash[1] %}
                     <div class="panel panel-default">
                             <div class="button panel-heading" data-toggle="collapse" data-target="#{{ event.id }}">
