--- a/_includes/docs.html
+++ b/_includes/docs.html
@@ -20,7 +20,7 @@
                         <h3 class="sub-title"> ALA Key Technical Document</h3>
                         <p class="text-justify">This document is a contribution from the Encounter Bay (ALA node portal internationalization) project, co-funded by the French, Spanish, Portuguese and Belgian GBIF Nodes and GBIF Secretariat through its Capacity Enhancement Support Programme.</p>
                         <p> It is intended to capture the essence of the technical documentation about ALA components necessary for evaluators/adopters to discover, assess, understand, install, configure, customize and operate the tools. </p>
-                        <P> Version: <a href="https://www.gbif.org/document/82847/ala-key-technical-documentation-english" target="_blank">English</a>, <a href="https://www.gbif.org/document/82848/ala-key-technical-documentation-french" target="_blank">French</a>, <a href="https://www.gbif.org/document/82850/ala-key-technical-documentation-portugese" target="_blank">Portugese</a>, <a href="https://www.gbif.org/document/82849/ala-key-technical-documentation-spanish" target="_blank">Spanish</a>.</p> 
+                        <p> Version: <a href="https://www.gbif.org/document/82847/ala-key-technical-documentation-english" target="_blank">English</a>, <a href="https://www.gbif.org/document/82848/ala-key-technical-documentation-french" target="_blank">French</a>, <a href="https://www.gbif.org/document/82850/ala-key-technical-documentation-portugese" target="_blank">Portugese</a>, <a href="https://www.gbif.org/document/82849/ala-key-technical-documentation-spanish" target="_blank">Spanish</a>.</p> 
                     </div><!--//content-->
                 </div><!--//item--> 
                 <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -40,7 +40,8 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Registry component</h3>
-                        <p class="text-justify">Metadata</p>
+                        <p class="text-justify">Atlas of Living Australia's module named "Collectory" is the registry component of the framework. <br/> Through the administration tool, you will be able to publish datasets via the GBIF IPT, GBIF API or by directly publishing your DarwinCore Archive on your installation. <br /> You will also be able to fill in metadata linked to institutions, collections, contacts, etc. <br />You will also have some public pages for each institution, collection or dataset you publish on your platform. There is also a search engine dedicated to datasets and another one to collections.</p>
+                        <p> Link: <a href="https://github.com/atlasoflivingaustralia/generic-collectory" target="_blank">Github folder</a></p> 
                     </div><!--//content-->
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -49,7 +50,8 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Biocache-store</h3>
-                        <p class="text-justify">Indexation</p>
+                        <p class="text-justify">This is the biocache-backend. It manages the loading, sampling, processing and indexing of occurrence records into the system. </p>
+                        <p> Link: <a href="https://github.com/atlasoflivingaustralia/biocache-store" target="_blank">Github folder</a>.</p>
                     </div><!--//content-->
                 </div><!--//item-->   
                 <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -57,8 +59,9 @@
                         <i class="fa fa-search"></i>
                     </div>
                     <div class="content">
-                        <h3 class="sub-title">Biocache-Hub</h3>
-                        <p class="text-justify">search engine module</p>
+                        <h3 class="sub-title">Occurrence search engine</h3>
+                        <p class="text-justify">Generic-hub is the occurrence record search engine of the ALA platform using JSON data format. It is a web UI using Grails framework for a backend service called biocache-service.</p>
+                        <p> Link: <a href="https://github.com/AtlasOfLivingAustralia/generic-hub" target="_blank">Github folder</a>.</p>
                     </div><!--//content-->
                 </div><!--//item-->           
             </div>
@@ -69,7 +72,8 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Spatial portal</h3>
-                        <p class="text-justify">Spatial portal</p>
+                        <p class="text-justify">The Spatial Portal focuses on where a chosen species was located, what species were found in a defined area and what are the environmental conditions in that area. <br />The spatial portal is divided in four different web applications: spatial portal UI (web portal), spatial analysis service, spatial layers service and spatial actions. They use web services to communicate with each other when necessary.</p>
+                        <p> Link: <a href="https://github.com/AtlasOfLivingAustralia?utf8=%E2%9C%93&q=spatial&type=&language=" target="_blank">Github folders</a>.</p>
                     </div><!--//content-->
                 </div><!--//item-->                
                 <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -78,7 +82,8 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">BIE</h3>
-                        <p class="text-justify">Species search</p>
+                        <p class="text-justify">BIE system is divided in two parts: BIE-inde and Generic-BIE. <br />The first one is a Grails web application that indexes taxonomic content in DwC-A and provides search web-service. <br />The second one is a front-end interface providing species pages and a search engine. </p>
+                        <p> Link: <a href="https://github.com/AtlasOfLivingAustralia/generic-bie" target="_blank">Github folders</a>.</p>
                     </div><!--//content-->
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -87,7 +92,8 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">ALA4R</h3>
-                        <p class="text-justify">ALA4R</p>
+                        <p class="text-justify">ALA4R module allows the R community to access data and resources hosted on the platform. The goal is to enable outputs (e.g., observations of species) to be queried and output in standard formats. </p>
+                        <p> Link: <a href="https://github.com/AtlasOfLivingAustralia/ALA4R" target="_blank">Github folder</a>.</p>
                     </div><!--//content-->
                 </div><!--//item-->               
             </div><!--//row-->                      
